--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -216,6 +216,7 @@
   <script>trustspot_key='b20ace13fb9180f4e8e8c7a1002fbf79089386a1c1e8f1a9538230121cfd88aac9210361badfc141e7a03298902032ef502b4bc0081d240ef88da8b305e6150b';</script>
   <script src="https://trustspot.io/assets/js/trustspot_product_reviews.js" defer="defer"></script>
 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
   <body class="gradient">
