--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -264,8 +264,8 @@
       }
     </script>
 
-    {%- if settings.predictive_search_enabled -%}
-      <script src="{{ 'predictive-search.js' | asset_url }}" defer="defer"></script>
-    {%- endif -%}
+    {% render 'footer-script' %}
+
+    <script src="{{ 'app.js' | asset_url }}" defer></script>
   </body>
 </html>
