--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -792,7 +792,27 @@
     {
       "type": "icons",
       "name": "Icons",
-      "limit": 1
+      "limit": 1,
+      "settings": [
+        {
+          "type": "image_picker",
+          "id": "features_1",
+          "label": "Features #1"
+
+        },
+        {
+          "type": "image_picker",
+          "id": "features_2",
+          "label": "Features #2"
+
+        },
+        {
+          "type": "image_picker",
+          "id": "features_3",
+          "label": "Features #3"
+
+        }
+      ]
     },
     {
       "type": "variant_picker",
