--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -796,21 +796,33 @@
       "settings": [
         {
           "type": "image_picker",
-          "id": "features_1",
-          "label": "Features #1"
-
+          "id": "icon_1",
+          "label": "Icon #1"
+        },
+        {
+          "type": "text",
+          "id": "icon_1_text",
+          "label": "Icon #1 Text"
         },
         {
           "type": "image_picker",
-          "id": "features_2",
-          "label": "Features #2"
-
+          "id": "icon_3",
+          "label": "Icon #2"
+        },
+        {
+          "type": "text",
+          "id": "icon_1_text",
+          "label": "Icon #1 Text"
         },
         {
           "type": "image_picker",
-          "id": "features_3",
-          "label": "Features #3"
-
+          "id": "icon_3",
+          "label": "Icon #3"
+        },
+        {
+          "type": "text",
+          "id": "icon_3_text",
+          "label": "Icon #3 Text"
         }
       ]
     },
