--- a/sections/main-product.liquid
+++ b/sections/main-product.liquid
@@ -800,7 +800,7 @@
           "label": "Icon #1"
         },
         {
-          "type": "text",
+          "type": "richtext",
           "id": "icon_1_text",
           "label": "Icon #1 Text"
         },
@@ -810,7 +810,7 @@
           "label": "Icon #2"
         },
         {
-          "type": "text",
+          "type": "richtext",
           "id": "icon_1_text",
           "label": "Icon #1 Text"
         },
@@ -820,7 +820,7 @@
           "label": "Icon #3"
         },
         {
-          "type": "text",
+          "type": "richtext",
           "id": "icon_3_text",
           "label": "Icon #3 Text"
         }
