--- a/assets/skio-plan-picker.css
+++ b/assets/skio-plan-picker.css
@@ -8,84 +8,137 @@
 
 .skio-group-container {
   display: none;
-  padding: 8px;
 }
 .skio-group-container--available {
   display: block;
+  position: relative;
+  /* box-shadow: 0 0 5px rgba(23, 24, 24, 0.05), 0 1px 2px rgba(0, 0, 0, 0.07); */
+  border-radius: 3px;
+  border-width: 1px;
+  border-color: transparent;
+  border-style: solid; 
+  transition: border-color 0.2s ease;
 }
 .skio-group-container--selected {
+  border-color: #DCDCDC;
   background-color: #f2f2f2;
-  border: 1px solid #DCDCDC;
-}
-
-/* Hide frequency if not selected */
-.skio-group-container:not(.skio-group-container--selected) .skio-frequency {
-  display: none;
 }
 
 .skio-group-input {
-  display: none;
-  cursor: pointer;
+  position: absolute;
+  width: 0px;
+  height: 0px;
+  opacity: 0;
 }
-.skio-group-input:checked ~ .skio-group-label .skio-radio-svg--checked {
-  display: block;
-}
-.skio-group-input:checked ~ .skio-group-label .skio-radio-svg--unchecked {
-  display: none;
-}
-.skio-group-input:not(:checked) ~ .skio-group-label .skio-radio-svg--checked {
-  display: none;
-}
-.skio-group-input:not(:checked) ~ .skio-group-label .skio-radio-svg--unchecked {
-  display: block;
+.skio-group-input:focus-visible ~ .skio-group-label {
+  outline: 2px #ccc solid;
+  outline-offset: 4px;
+  border-radius: 5px;
 }
 
 .skio-group-label {
   display: flex;
-  position: relative;
+  flex-direction: column;
   cursor: pointer;
-  color: #666;
-  padding-left: 28px !important;
-}
-.skio-group-label::before {
-  content: "" !important;
-  position: absolute !important;
-  left: 0 !important;
-  top: 0 !important;
-  width: 18px !important;
-  height: 18px !important;
-  border: 3px solid #F05423 !important;
-  background: #fff !important;
-}
-.skio-group-container--selected .skio-group-label::after {
-  content: "" !important;
-  width: 8px !important;
-  height: 8px !important;
-  background: #F05423 !important;
-  position: absolute !important;
-  top: 5px !important;
-  left: 5px !important;
-  -webkit-transition: all .2s ease !important;
-  transition: all .2s ease !important;
+  padding: 10px;
+  overflow: hidden;
 }
 
-.skio-radio-svg__container {
+.skio-group-topline {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  width: 100%;
+  font-size: 16px;
+  font-weight: 700;
+}
+
+.skio-radio__container {
+  display: flex;
   margin-right: 10px;
-  margin-top: 5px;
+  color: var(--gradient-base-accent-2);
+}
+
+.skio-radio {
+  transition: transform 0.25s cubic-bezier(0.4,0,0.2,1);
+  transform-origin: center;
+  transform: scale(0);
+  opacity: 0;
+}
+.skio-group-label:hover .skio-radio {
+  transform: scale(1);
+  opacity: 0.75;
+}
+.skio-group-input:checked ~ .skio-group-label .skio-radio {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.skio-price {
+  margin-left: 0.5em;
+}
+
+.skio-group-content {
+  width: auto;
+  margin-left: 30px;
+  transition: max-height 0.25s cubic-bezier(0.4,0,0.2,1),
+              opacity 0.25s cubic-bezier(0.4,0,0.2,1);
+  max-height: 38px;
+  opacity: 1;
+}
+
+/* Hide frequency if not selected */
+.skio-group-container:not(.skio-group-container--selected) .skio-group-content {
+  max-height: 0;
+  opacity: 0;
+  pointer-events: none;
+}
+
+.skio-group-title {
+  min-width: max-content;
+  font-weight: 700;
+}
+
+.skio-save {
+  color: #fff;
+  /* border: 1px #0fa573 solid;  */
+  background-color: var(--gradient-base-accent-2);
+  padding: 0px 8px;
+  border-radius: 20px;
 }
 
 .skio-frequency {
   display: flex;
   align-items: center;
   gap: 5px;
-  padding-top: 8px;
+  padding: 8px 30px 8px 10px;
+  margin-top: 5px;
+  border-radius: 3px;
+  background-color: #fcfcfc;
+  width: 100%;
+  border: 0;
+  font-size: 14px;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='h-6 w-6' fill='none' viewBox='0 0 24 24' stroke='currentColor' stroke-width='2'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' d='M19 9l-7 7-7-7' /%3E%3C/svg%3E");
+  background-position: right 10px top 50%;
+  background-size: 18px;
+  background-repeat: no-repeat;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+.skio-frequency.skio-frequency--one {
+  background-image: none;
 }
 
-.skio-selling-plans {
-  margin-bottom: 0;
+.skio-frequency span {
+  text-transform: lowercase;
 }
 
-.skio-price {
-  color: #f05423 !important;
-  font-weight: 700 !important;
+.skio-hidden {
+  max-width: 0px;
+  max-height: 0px;
+  opacity: 0;
+  pointer-events: none;
 }
