adjust position of mini cart

--- a/assets/custom.css
+++ b/assets/custom.css
@@ -1208,6 +1208,7 @@ nav.header__inline-menu {
 
 .cart-notification-wrapper .cart-notification{
   z-index: 1;
+  top: 110px;
 }
 
 .header-wrapper{
