--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -1,3 +1,4 @@
 @import 'flickity/dist/flickity.min';
 @import './vendor/index';
 @import './components/product-form-icons.scss';
+@import './components/mini-cart.scss';
