--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -2,3 +2,4 @@
 @import './vendor/index';
 @import './components/product-form-icons.scss';
 @import './components/mini-cart.scss';
+@import './components/header.scss';
