--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -2,10 +2,10 @@
     height: 0 !important;
     margin-top: 0;
     transform: unset !important;
-    -moz-transition: opacity 0.4s ease-in-out !important;
-    -o-transition: opacity 0.4s ease-in-out !important;
-    -webkit-transition: opacity 0.4s ease-in-out !important;
-    transition: opacity 0.4s ease-in-out !important;
+    -moz-transition: opacity 0.4s ease-in !important;
+    -o-transition: opacity 0.4s ease-in !important;
+    -webkit-transition: opacity 0.4s ease-in !important;
+    transition: opacity 0.4s ease-in !important;
 }
 .mega-menu[open] .mega-menu__content{
     height: auto !important;
