--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -1,12 +1,9 @@
 .mega-menu .mega-menu__content{
-    height: 0 !important;
+    height: 0;
     margin-top: 0;
     transform: unset !important;
-    -moz-transition: opacity 0.4s ease-in !important;
-    -o-transition: opacity 0.4s ease-in !important;
-    -webkit-transition: opacity 0.4s ease-in !important;
-    transition: opacity 0.4s ease-in !important;
+    display: none;
 }
 .mega-menu[open] .mega-menu__content{
-    height: auto !important;
+    height: auto;
 }
