--- a/sections/product-more-information.liquid
+++ b/sections/product-more-information.liquid
@@ -83,6 +83,23 @@
         {%- if product.metafields.tabbed_image.tabbed_image_url != blank -%}
           <img alt="{{ product.title }}" image-desktop-selector src="{{ product.metafields.tabbed_image.tabbed_image_url | img_url: '388x' }}"  loading="lazy" />
         {%- endif -%}
+
+        <div class="icons-list">
+        {% for block in section.blocks %}
+          {% case block.type %}
+            {% when 'features' %}
+              <div class="list-item">
+                  <div class="li_icon">
+                  <img src="{{ block.settings.image | img_url: 'x39' }}" title="{{ block.settings.label }}" alt="{{ block.settings.label }}" />
+                  </div>
+                  <div class="li_txt">
+                  <p>{{ block.settings.label }}</p>
+                  </div>
+              </div>
+          {% endcase %}
+      {% endfor %}
+    </div>
+
         <div class="icons-list">
           {% assign tabbed_icon_text = product.metafields.tabbed_icon_text %}
           {%- for i in (i..tabbed_icon_text.size) -%}
@@ -186,6 +203,23 @@
           "info": "Place the ID of the element",
           "placeholder": "SECTION_ID"
         }
+      ]
+    },
+    {
+      "type": "features",
+      "name": "Features",
+      "limit": 3,
+      "settings": [
+        {
+          "type": "image_picker",
+          "id": "image",
+          "label": "Icon",
+        },
+        {
+            "type": "richtext",
+            "id": "label",
+            "label": "Label",
+          }
       ]
     }
   ],
