--- a/assets/theme.css
+++ b/assets/theme.css
@@ -870,6 +870,13 @@ a.footer-logo {
   display: flex;
 }
 
+.product-testimonials .page-content-wrapper.center-mode {
+  justify-content: center;
+}
+.product-testimonials .page-content-wrapper.center-mode .content-right {
+  margin-top: 0;
+}
+
 .product-testimonials .section-head {
   max-width: 100%;
 }
@@ -1095,6 +1102,7 @@ a.footer-logo {
   padding: 0.5em;
   border: 2px solid #000;
   width: 33.33%;
+  font-size: 12px;
 }
 
 table td p {
@@ -1108,6 +1116,7 @@ table td p {
 @media (min-width: 990px) {
   .section-how-do-we-stack-up table td {
     padding: 1px 2em;
+    font-size: 16px;
   }
 }
 /* 
