--- a/sections/product-instruction.liquid
+++ b/sections/product-instruction.liquid
@@ -12,77 +12,90 @@
   }
 {%- endstyle -%}
 
-<div class="section-instruction page-accent--{{ section.settings.color_accent }}">
-  <div class="page-width isolate section-{{ section.id }}-padding">
-    <div class="section-head">
-      <h5>{{ section.settings.title }}</h5>
-      <h2 class="h1">{{ section.settings.subhead }}</h2>
-    </div>
+{% assign show_section = false %}
+{% if product.metafields.how_to_use.how_to_use_1_image != blank %}
+  {% assign show_section = true %}
+{% endif %}
+{% if product.metafields.how_to_use.how_to_use_2_image != blank %}
+  {% assign show_section = true %}
+{% endif %}
+{% if product.metafields.how_to_use.how_to_use_3_image != blank %}
+  {% assign show_section = true %}
+{% endif %}
 
-    <div class="instruction-list">
-      {%- unless product.metafields.how_to_use.how_to_use_1_image == blank and product.metafields.how_to_use.how_to_use_1_heading == blank and product.metafields.how_to_use.how_to_use_1_content == blank  -%}
-        <div class="instruction-content">
-          {%- unless product.metafields.how_to_use.how_to_use_1_image == blank -%}
-            <div class="instruction-image">
-              <img src="{{ product.metafields.how_to_use.how_to_use_1_image | img_url: 'master' }}" class="stepsImage">
-              <span class="index">1</span>
-            </div>
-          {%- endunless -%}
-          {%- unless product.metafields.how_to_use.how_to_use_1_heading == blank and product.metafields.how_to_use.how_to_use_1_content == blank -%}
-            <div class="instruction-text">
-              {%- unless product.metafields.how_to_use.how_to_use_1_heading == blank -%}
-                <div class="text-title">{{ product.metafields.how_to_use.how_to_use_1_heading }} <span>{% render 'svg-circle-bordered' %}</span></div>
-              {%- endunless -%}
-              {%- unless product.metafields.how_to_use.how_to_use_1_content == blank -%}
-                <p>{{ product.metafields.how_to_use.how_to_use_1_content }} </p>
-              {%- endunless -%}
-            </div>
-          {%- endunless -%}
-        </div>
-      {%- endunless -%}
-      {%- unless product.metafields.how_to_use.how_to_use_2_image == blank and product.metafields.how_to_use.how_to_use_2_heading == blank and product.metafields.how_to_use.how_to_use_2_content == blank  -%}
-        <div class="instruction-content">
-          {%- unless product.metafields.how_to_use.how_to_use_2_image == blank -%}
-            <div class="instruction-image">
-              <img src="{{ product.metafields.how_to_use.how_to_use_2_image | img_url: 'master' }}" class="stepsImage">
-              <span class="index">2</span>
-            </div>
-          {%- endunless -%}
-          {%- unless product.metafields.how_to_use.how_to_use_2_heading == blank and product.metafields.how_to_use.how_to_use_2_content == blank -%}
-            <div class="instruction-text">
-              {%- unless product.metafields.how_to_use.how_to_use_2_heading == blank -%}
-                <div class="text-title">{{ product.metafields.how_to_use.how_to_use_2_heading }} <span>{% render 'svg-circle-bordered' %}</span></div>
-              {%- endunless -%}
-              {%- unless product.metafields.how_to_use.how_to_use_2_content == blank -%}
-                <p>{{ product.metafields.how_to_use.how_to_use_2_content }} </p>
-              {%- endunless -%}
-            </div>
-          {%- endunless -%}
-        </div>
-      {%- endunless -%}
-      {%- unless product.metafields.how_to_use.how_to_use_3_image == blank and product.metafields.how_to_use.how_to_use_3_heading == blank and product.metafields.how_to_use.how_to_use_3_content == blank  -%}
-        <div class="instruction-content">
-          {%- unless product.metafields.how_to_use.how_to_use_3_image == blank -%}
-            <div class="instruction-image">
-              <img src="{{ product.metafields.how_to_use.how_to_use_3_image | img_url: 'master' }}" class="stepsImage">
-              <span class="index">3</span>
-            </div>
-          {%- endunless -%}
-          {%- unless product.metafields.how_to_use.how_to_use_3_heading == blank and product.metafields.how_to_use.how_to_use_3_content == blank -%}
-            <div class="instruction-text">
-              {%- unless product.metafields.how_to_use.how_to_use_3_heading == blank -%}
-                <div class="text-title">{{ product.metafields.how_to_use.how_to_use_3_heading }} <span>{% render 'svg-circle-bordered' %}</span></div>
-              {%- endunless -%}
-              {%- unless product.metafields.how_to_use.how_to_use_3_content == blank -%}
-                <p>{{ product.metafields.how_to_use.how_to_use_3_content }} </p>
-              {%- endunless -%}
-            </div>
-          {%- endunless -%}
-        </div>
-      {%- endunless -%}
+{% if show_section %}
+  <div class="section-instruction page-accent--{{ section.settings.color_accent }}">
+    <div class="page-width isolate section-{{ section.id }}-padding">
+      <div class="section-head">
+        <h5>{{ section.settings.title }}</h5>
+        <h2 class="h1">{{ section.settings.subhead }}</h2>
+      </div>
+
+      <div class="instruction-list">
+        {%- unless product.metafields.how_to_use.how_to_use_1_image == blank and product.metafields.how_to_use.how_to_use_1_heading == blank and product.metafields.how_to_use.how_to_use_1_content == blank  -%}
+          <div class="instruction-content">
+            {%- unless product.metafields.how_to_use.how_to_use_1_image == blank -%}
+              <div class="instruction-image">
+                <img src="{{ product.metafields.how_to_use.how_to_use_1_image | img_url: 'master' }}" class="stepsImage">
+                <span class="index">1</span>
+              </div>
+            {%- endunless -%}
+            {%- unless product.metafields.how_to_use.how_to_use_1_heading == blank and product.metafields.how_to_use.how_to_use_1_content == blank -%}
+              <div class="instruction-text">
+                {%- unless product.metafields.how_to_use.how_to_use_1_heading == blank -%}
+                  <div class="text-title">{{ product.metafields.how_to_use.how_to_use_1_heading }} <span>{% render 'svg-circle-bordered' %}</span></div>
+                {%- endunless -%}
+                {%- unless product.metafields.how_to_use.how_to_use_1_content == blank -%}
+                  <p>{{ product.metafields.how_to_use.how_to_use_1_content }} </p>
+                {%- endunless -%}
+              </div>
+            {%- endunless -%}
+          </div>
+        {%- endunless -%}
+        {%- unless product.metafields.how_to_use.how_to_use_2_image == blank and product.metafields.how_to_use.how_to_use_2_heading == blank and product.metafields.how_to_use.how_to_use_2_content == blank  -%}
+          <div class="instruction-content">
+            {%- unless product.metafields.how_to_use.how_to_use_2_image == blank -%}
+              <div class="instruction-image">
+                <img src="{{ product.metafields.how_to_use.how_to_use_2_image | img_url: 'master' }}" class="stepsImage">
+                <span class="index">2</span>
+              </div>
+            {%- endunless -%}
+            {%- unless product.metafields.how_to_use.how_to_use_2_heading == blank and product.metafields.how_to_use.how_to_use_2_content == blank -%}
+              <div class="instruction-text">
+                {%- unless product.metafields.how_to_use.how_to_use_2_heading == blank -%}
+                  <div class="text-title">{{ product.metafields.how_to_use.how_to_use_2_heading }} <span>{% render 'svg-circle-bordered' %}</span></div>
+                {%- endunless -%}
+                {%- unless product.metafields.how_to_use.how_to_use_2_content == blank -%}
+                  <p>{{ product.metafields.how_to_use.how_to_use_2_content }} </p>
+                {%- endunless -%}
+              </div>
+            {%- endunless -%}
+          </div>
+        {%- endunless -%}
+        {%- unless product.metafields.how_to_use.how_to_use_3_image == blank and product.metafields.how_to_use.how_to_use_3_heading == blank and product.metafields.how_to_use.how_to_use_3_content == blank  -%}
+          <div class="instruction-content">
+            {%- unless product.metafields.how_to_use.how_to_use_3_image == blank -%}
+              <div class="instruction-image">
+                <img src="{{ product.metafields.how_to_use.how_to_use_3_image | img_url: 'master' }}" class="stepsImage">
+                <span class="index">3</span>
+              </div>
+            {%- endunless -%}
+            {%- unless product.metafields.how_to_use.how_to_use_3_heading == blank and product.metafields.how_to_use.how_to_use_3_content == blank -%}
+              <div class="instruction-text">
+                {%- unless product.metafields.how_to_use.how_to_use_3_heading == blank -%}
+                  <div class="text-title">{{ product.metafields.how_to_use.how_to_use_3_heading }} <span>{% render 'svg-circle-bordered' %}</span></div>
+                {%- endunless -%}
+                {%- unless product.metafields.how_to_use.how_to_use_3_content == blank -%}
+                  <p>{{ product.metafields.how_to_use.how_to_use_3_content }} </p>
+                {%- endunless -%}
+              </div>
+            {%- endunless -%}
+          </div>
+        {%- endunless -%}
+      </div>
     </div>
   </div>
-</div>
+{% endif %}
 
 {% schema %}
 {
