--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -1,5 +1,5 @@
 @import 'flickity/dist/flickity.min';
 @import './vendor/index';
-@import './components/product-form-icons.scss';
+@import './components/product.scss';
 @import './components/mini-cart.scss';
 @import './components/header.scss';
