--- a/assets/theme.css
+++ b/assets/theme.css
@@ -1677,6 +1677,21 @@ input#NewsletterForm--footer:hover, input#NewsletterForm--footer:focus {
   text-decoration: none;
 }
 
+.product__info-wrapper variant-radios {
+  padding-top: 15px;
+}
+
+.product__info-wrapper .product-form__input input[type=radio] + label {
+  border: 1px solid #cccccc;
+  background-color: #fff;
+  color: #000000;
+}
+
+.product__info-wrapper .product-form__input input[type=radio]:checked + label {
+  border: 1px solid #000000;
+  background-color: #fff;
+}
+
 .cart-notification-wrapper .cart-notification {
   z-index: 1;
   top: 110px;
